# opl-cancer

./: .env.example  .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  MAINTAINERS.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  TECHNICAL_REPORT.md  conftest.py  models.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  patient_question.md
.github/workflows/: ci.yml
agents/: opl-experts.yml
benchmark/: .gitignore  README.md
benchmark/adapter/: README.md  compare_scores.py  dedup_merge.py  finalize_mtb_vs_opl.sh  merge_runs.py  mtb_full.py  mtb_lite.py  nccn_pageindex.py  opl_full.py  render_mtb_vs_opl_report.py  run_benchmark.py
benchmark/reports/: REPORT_MTB_vs_OPL.md  REPORT_MTB_vs_OPL_v2.10.md
docs/: ANTI_PATTERNS.md  ANTI_PATTERNS_v1.4.md  CHANGELOG-archive.md  P2_DEFERRALS_v1.5.md  PRD_v1.5.md  RETROSPECTIVE_v1.4_case_study.md  SUBAGENT_CONTRACT.md  TECHNICAL_REPORT_v1.4.0_zh.md  VMTB_DIFF_v1.4.0_zh.md
docs/adr/: 0001-substrate-references.md  0002-main-thread-only-dispatch.md  0003-no-human-in-the-loop.md  0004-task-primitive-grammar-in-experts.md  0005-pi-single-conversational-surface.md  0006-audit-fixes-v1.2.0.md  0007-eval-panel-v1.3.0-followup.md  0008-eval-panel-round-2-v1.3.2.md  0009-claude-native-executor.md  0010-v2-paradigm-shift.md  0021-truthful-execution.md  0022-bio-skills-vendoring.md  0023-wave6-manuscript-and-n1a-bundle.md  0024-n1arxiv-platform-skeleton.md  0025-compositional-paradigm.md  0026-delivery-non-bypassable.md  0041-prompt-script-boundary-and-observe.md  0042-hypothesis-tree-reentry-abstraction-funnel.md  0043-structured-run-event-log.md  0044-claim-evidence-graph.md  0045-integrator-plugin-inventory.md  0046-task-capability-registry.md  0047-release-golden-eval.md  0048-deterministic-recovery-plan.md
docs/governance/: contributor_agreement.md  prompt_change_review.md
docs/iteration/: EVOLUTION_EXTRACTION_TODO.md  HARNESS_SPLIT_PRD.md  IMPLEMENTATION_STATUS.md  RESEARCH_TEAM_ITERATION_PRD.md  REVIEW_v2.6.0.md  V2_9_AUDIT_POLISH_PRD.md
docs/landing/: founder_mode_against_cancer.md
docs/perspective/: founder-mode-against-cancer.md  founder-mode-against-cancer.zh-CN.md  research-dossier.md
docs/rfc/: 0001-compositional-paradigm.md
knowledge/: serious_risks_per_drug.json
knowledge/nccn_excerpts/: README.md  hcc_2025.json  nsclc_2025.json
patients/: SCHEMA.md
prompts/auditor/: henry_axis_naming.md  l1_mechanical_gates.md  l2_disagreement_summariser.md  l3_permission_gate.md  l4_rollback.md  quote_verify_numerics.md
prompts/delivery/: patient_brief.html.j2  patient_brief.md.j2
prompts/experts/: _template.md  expert_task_package.md
prompts/methods/: acmg_germline_classification.yaml  conformal_prediction.yaml  cox_proportional_hazards.yaml  deseq2_differential_expression.yaml  gsea_enrichment.yaml  informative_selection.md  kaplan_meier.yaml  popPK_NONMEM_proxy.yaml  recist_response_assessment.yaml
prompts/pi/: delivery.md  drilldown.md  goal_backward_planner.md  insight_abstraction.md  intake_router_llm.md  intent_parser.md  persona.md  proactive_push.md
references/: agent-portability.md  architecture.md  clinical_stop_rules.json  drug_comorbidity_contraindications.json  expert-roster.md  founder-mode-philosophy.md  integrator-catalog.md  mechanical-gates.md  patient-data-layout.md  patient_jargon_glossary.json  permission-levels.md  role_taxonomy.yaml  troubleshooting.md  v2-e2e-validation-matrix.md  v2-iteration-report.md  v2-paradigm.md  v2-roadmap.md  version-history.md  wave-lifecycle.md
schemas/: claim.v2.schema.json  n1a_bundle.v0.1.schema.json  profile.schema.json
scripts/: acknowledge.sh  cli.py  dispatch_e2e_evaluator.py  init_patient.sh  install.sh  list_experts.sh  live_v2_e2e_minimax.py  run_wave1.sh  status.sh  verify_evolution_e2e.py  verify_minimax_setup.py  verify_v2_e2e.py
tests/: test_adr0042_arbor_depth.py  test_adrs_present.py  test_ci_config.py  test_claim_graph.py  test_cli.py  test_cli_honest_failure.py  test_comorbid_planner.py  test_docs_refs.py  test_governance_present.py  test_interrupt_handling.py  test_mcp_session_ops.py  test_models_yaml.py  test_no_orphans.py  test_p0_acceptance.py  test_p1_acceptance.py  test_p1b_v15_artifacts.py  test_p2_acceptance.py  test_p2_deferral_doc.py  test_p3_acceptance.py  test_p4_5_acceptance.py  test_p5_acceptance.py  test_p5_golden_set_per_file.py  test_p5_henry_deep.py  test_p5_integrator_wiring.py  test_p6_acceptance.py  test_patient_plain_brief.py  test_persona_prefix_auto.py  test_preflight.py  test_progress_reporter.py  test_readme.py  test_recovery_plan.py  test_release_golden_eval.py  test_run_events.py  test_skill_entry.py  test_skill_portability.py  test_smoke.py  test_v23_wave6_prompts.py  test_v2_10_hygiene.py  test_v2_generation_strategies.py  test_v2_primekg_integrator.py  (+3 more)
tools/: __init__.py  aggregate_evaluator_verdicts.py  observe.py  reproduce.py  run_quad_evaluation.py  sign_contributor_agreement.py  verify_provenance.py
workflows/: interrupt-protocol.md  run-lifecycle.md
(+649 files in other folders)
