[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opl-cancer"
version = "0.0.1"
description = "Open-source AI scientist team skill plugin for cancer patients"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "CancerDAO Contributors" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "jinja2>=3.1",
    "anyio>=4.3",
    "tenacity>=8.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyyaml>=6.0",
    "respx>=0.21",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
opl-cancer = "opl_cancer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opl_cancer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
