[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opl-cancer"
version = "2.3.0"
description = "Open-source AI scientist team skill plugin for cancer patients — installed via npx skills add CancerDAO/opl-cancer-skill"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "CancerDAO Contributors" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "jinja2>=3.1",
    "anyio>=4.3",
    "tenacity>=8.2",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyyaml>=6.0",
    "respx>=0.21",
    "freezegun>=1.5",
    "types-PyYAML>=6.0",
]

# v2.2 ADR-0022: heavy bio-skill dependencies. Optional — most workflows
# work in mock-mode without these. Install via: `pip install opl-cancer[bio]`.
bio = [
    "lifelines>=0.27",
    "matplotlib>=3.7",
    # SigProfilerAssignment downloads ~1.5 GB on first run — opt-in only.
    # "SigProfilerAssignment>=0.0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# When PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 is set (CI / sandbox), explicitly
# load pytest-asyncio + respx so async LLM/HTTP tests still collect.
addopts = "-p pytest_asyncio.plugin -p respx"
markers = [
    "live: tests that hit real external services (MiniMax, OpenAI). Skipped by default; require env vars to run.",
]

[project.scripts]
opl-cancer = "opl_cancer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opl_cancer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
strict = true
python_version = "3.11"
